--- a/companywebsite/static/home.html
+++ b/companywebsite/static/home.html
@@ -1,48 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>EduSoft Private Limited</title>
+    <title>Future Groups Private Ltd.,</title>
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="icon" href="./img/icon.png" type="image/x-icon" />
   </head>
 
   <body>
     <div class="container">
-      <div class="banner">EduSoft Private Limited.</div>
+      <div class="banner"></div>
       <div class="menu">
-        <div class="menuitemselected"><a href="/static/home.html">Home</a></div>
+        <div class="menuitem"><a href="/static/home.html">Home</a></div>
         <div class="menuitem"><a href="/static/products.html">Products</a></div>
-        <div class="menuitem"><a>People</a></div>
-        <div class="menuitem"><a>Contact Us</a></div>
-      </div>
+        <div class="menuitem"><a href="/static/people.html">People</a></div>
+        <div class="menuitemselected"><a href="/static/contactus.html">Contact Us</a></div>
+        </div>
       <div class="content">
         <div class="homecontent">
           <h1>About Us</h1>
-          <img src="./img/building.png" alt="Building" />
+          <img src="./img/office.jpg" alt="Building" />
           <div class="contenttext">
-            At Tally, we believe in the power of technology to make business
-            owners efficient, empowered and happier, so they can focus on what
-            matters most for their business. We design our products to focus on
-            just that to make our products work for you, and not the other way
-            around.
-            <br />
-            Our new product TallyPrime takes this to a new level, making your
-            start to automation, or your switch to Tally simpler than ever
-            before. You can now discover the product much more easily and make
-            the product do more for you, without learning anything new. There is
-            greater flexibility as the product adapts to your business and your
-            way of working. And the transformed look and feel will only make you
-            love the product even more.
-            <ul>
-              <li>Simple to learn, easier to use</li>
-              <li>Insightful , actionable & customizable reports</li>
-              <li>Anywhere, anytime and secure access</li>
-            </ul>
+            We are on a mission to save humanity and revive the economy from the catastrophic effects of the pandemic with carrier tracking and non-pharmaceutical interventions.
+            Flattening the curve of the Coronavirus is of top priority for almost every country today. Unless they are able to flatten the curve, peoples’ lives, as well as the economy, are in severe danger. We have developed a solution that governments can use to help stop the spread, and tools that will help resume commerce, and even travel.
+            <br>
+            
+            We are on a mission to save humanity and revive the economy from the catastrophic effects of the pandemic with carrier tracking and non-pharmaceutical interventions.
+            Flattening the curve of the Coronavirus is of top priority for almost every country today. Unless they are able to flatten the curve, peoples’ lives, as well as the economy, are in severe danger. We have developed a solution that governments can use to help stop the spread, and tools that will help resume commerce, and even travel.
+<br>
+ 
           </div>
         </div>
       </div>
       <div class="footer">
-        Copyright &#169; 2021 EduSoft Private Limited, Developed by Obed Otto.
+        Copyright &#169; 2021 Future Groups Private Ltd., Developed by Vishwa Rathinam S.
       </div>
     </div>
   </body>
