--- a/companywebsite/static/people.html
+++ b/companywebsite/static/people.html
@@ -64,7 +64,7 @@
         </div>        
     </div>
     <div class="footer">
-      Copyright &#169; 2021 Future Groups Private Ltd., Developed by Vishwa Rathinam S.
+      Copyright &#169; 2021 Future Groups Private Ltd., Developed by JOANSJAI AUTHERS.A.
     </div>
   </div>
 </body>
